@@ -15,7 +15,9 @@
  - Reimplemented -a, --no-auto argument.
  - Made the Character chart window show the current page as selected
    from the serverlist.
- - Fixed a bug in entering text w/GTK2+ IMs [653751].
+ - Fixed a bug in entering text with GTK2 IMs [653751].
+ - Final fix for filenames' encoding in DCC (I hope?).
+ - 
  - 
  - 
 
